messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-green
  template:
    metadata:
      labels:
        app: messaging-green
    spec:
      containers:
        - name: messaging-green
          image: your-dockerhub-username/messaging-app:2.0
          ports:
            - containerPort: 8000
