messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging-blue   # switch to messaging-green for rollout
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
